--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 
 
 <script type="text/javascript" src="assets/javascript/game.js"></script>
-
+<script type="text/javascript" src="assets/javascript/chat.js"></script>
 </body>
 </html>
