--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     </div>
 					</div>
  
-                <form id="chat">
+                <!-- <form id="chat">
                 	<textarea  id="chatbox" type="text" class="col-md-12"></textarea>
                 	<input id="send" type="submit" class="btn btn-default btn-primary" value="send">
-                </form>
+                </form> -->
                 </div>
 
 
