--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
                     </div>
 					</div>
  
-                <!-- <form id="chat">
+                <div id="chat">
+                <div  id="displaychat" class="col-md-12"></div>
                 	<textarea  id="chatbox" type="text" class="col-md-12"></textarea>
-                	<input id="send" type="submit" class="btn btn-default btn-primary" value="send">
-                </form> -->
+                	<button id="send" type="submit" class="btn btn-default btn-primary">Send</button>  
+                </div>
                 </div>
 
 
